security/security-context-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 1000
        capabilities: 
          add: ["MAC_ADMIN"]
